# shield

./: .env.example  .gitignore  Taskfile.yaml  main.py  pyproject.toml
shield/: cli.py  client.py
shield/config/: settings.py
shield/data/: test_data.csv
shield/data/preprocessed/: test_data.csv
shield/models/: __init__.py  api.py  evaluation.py  evaluator.py
shield/scripts/: evaluator.py  reporter.py  utils.py
