[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shield"]

[project]
name = "shield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pip>=26.0.1",
    "ipykernel>=7.2.0",
    "datasets>=4.6.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "click>=8.3.1",
    "rich>=14.3.3",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "plotly>=6.5.2",
    "fast-langdetect>=1.0.0",
    "pandas>=2.3.3",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
shield = "shield.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
